Prevent hierarchy indicators in process list from being replaced with '...' on Firefox

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1086,6 +1086,7 @@ h3#headerText {
 
 #processesTabView\:processesForm\:processesTable .hierarchy-info {
     width: calc(var(--default-double-size) + var(--default-full-size));
+    text-overflow: clip;
 }
 
 #processesTabView\:processesForm\:processesTable .hierarchy-info > i {
